# django-wordle

./: .gitignore  README.md  pyproject.toml
christmax/: Makefile
christmax/base/locale/en/LC_MESSAGES/: django.po
christmax/base/locale/zh/LC_MESSAGES/: app.po  django.po  manual.po  quiz.po
christmax/base/management/commands/: compile_translations.py
christmax/base/static/css/: prism-adaptive.css
christmax/base/static/js/: theme-switcher.js
christmax/base/templates/: base.html
christmax/base/templates/includes/: footer.html  navbar.html
christmax/base/tests/: __init__.py  test_i18n_settings.py  test_i18n_urls.py  test_language_switch.py
christmax/christmax/: settings.py  urls.py
christmax/quiz/: admin.py  models.py  urls.py  views.py
christmax/quiz/management/: __init__.py
christmax/quiz/management/commands/: __init__.py  load_seed_data.py
christmax/quiz/migrations/: 0001_initial.py  0002_category_prism_language_alter_category_icon_class.py  0003_remove_category_prism_language_and_more.py
christmax/quiz/templates/quiz/: base_quiz.html  dev.html
christmax/users/: admin.py  backends.py  custom_allauth.py  models.py  test_admin_auth.py  test_models.py
christmax/users/migrations/: 0001_initial.py  0002_remove_profile_experience_points_and_more.py
docs/: quiz-models-erd.mmd  quiz-models.md  seed-data.md  translation-system.md
