[tool.poetry]
name = "django-wordle"
version = "0.0.1"
description = "Group project with Jimmy, Jeff, C-Long"
authors = ["tkin91e55 <tkingkwun@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
django = "^5.2.8"
django-model-utils = "^5.0.0"
django-environ = "^0.12.0"

pytest = "8.2.2"  # https://github.com/pytest-dev/pytest
pytest-sugar = "1.0.0"  # https://github.com/Frozenball/pytest-sugar
django-coverage-plugin = "3.1.0"  # https://github.com/nedbat/django_coverage_plugin
pytest-django = "4.8.0"  # https://github.com/pytest-dev/pytest-django

whitenoise = "^6.11.0"

[tool.poetry.group.dev.dependencies]

# DX
django-extensions = "^4.1"

# Testing
django-debug-toolbar = "^6.1.0"
coverage = "7.5.4"  # https://github.com/nedbat/coveragepy
factory-boy = "3.3.0"  # https://github.com/FactoryBoy/factory_boy

# Linting and Code quality
ruff = "^0.5.5"
pre-commit = "^3.7.1"
pydocstringformatter = "^0.7.2"
django-types = "^0.22.0"
django-stubs = "^5.2.7"
djlint = "1.34.1"  # https://github.com/Riverside-Healthcare/djLint

# Documentation
sphinx = "^7.3.7"
pyparsing = "^3.2.5"
pydot = "^4.0.1"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"
src = ["src", "tests"]
exclude = [ ]

[tool.ruff.lint]
select = [
  "F",      # Pyflakes - basic Python errors
  "E",      # pycodestyle errors - PEP 8 violations
  "W",      # pycodestyle warnings - PEP 8 style issues
  "C90",    # mccabe - complexity checking
  "I",      # isort - import sorting
  "N",      # pep8-naming - naming conventions
  "UP",     # pyupgrade - upgrade syntax for newer Python
  "YTT",    # flake8-2020 - misuse of sys.version checks
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",  # flake8-async - async/await best practices
  "S",      # flake8-bandit - security testing
  "BLE",    # flake8-blind-except - catch specific exceptions
  "FBT",    # flake8-boolean-trap - avoid boolean function arguments
  "B",      # flake8-bugbear - likely bugs and design problems
  "A",      # flake8-builtins - avoid shadowing builtins
  "C4",     # flake8-comprehensions - better list/dict comprehensions
  "DTZ",    # flake8-datetimez - datetime timezone awareness
  "T10",    # flake8-debugger - no debugger statements
  "DJ",     # flake8-django - Django best practices
  "EM",     # flake8-errmsg - error message best practices
  "EXE",    # flake8-executable - shebang presence/absence
  "FA",     # flake8-future-annotations - future annotations usage
  "ICN",    # flake8-import-conventions - import naming conventions
  "G",      # flake8-logging-format - logging format strings
  'INP',    # flake8-no-pep420 - require __init__.py
  'PIE',    # flake8-pie - miscellaneous lints
  "T20",    # flake8-print - no print statements
  'PYI',    # flake8-pyi - type stub files
  'PT',     # flake8-pytest-style - pytest best practices
  "Q",      # flake8-quotes - consistent quote usage
  "RSE",    # flake8-raise - raise statement improvements
  "RET",    # flake8-return - return statement improvements
  "SLF",    # flake8-self - private member access
  "SLOT",   # flake8-slots - __slots__ usage
  "SIM",    # flake8-simplify - code simplification suggestions
  "TID",    # flake8-tidy-imports - import organization
  "TCH",    # flake8-type-checking - type checking import blocks
  "INT",    # flake8-gettext - internationalization
  # "ARG", # flake8-unused-arguments - unused function arguments
  "PTH",    # flake8-use-pathlib - prefer pathlib over os.path
  # "ERA",    # eradicate - commented-out code
  "PD",     # pandas-vet - pandas best practices
  "PGH",    # pygrep-hooks - misc regexp-based checks
  "PL",     # Pylint - comprehensive code quality checks
  "TRY",    # tryceratops - exception handling best practices
  "FLY",    # flynt - convert string formatting to f-strings
  # "NPY",  # NumPy-specific rules
  # "AIR",  # Airflow-specific rules
  "PERF",   # Perflint - performance anti-patterns
  # "FURB", # refurb - modernization suggestions
  # "LOG",  # flake8-logging - logging best practices
  "RUF"     # Ruff-specific rules
]
extend-select = [
  "D",      # pydocstyle - docstring conventions
  "B",      # flake8-bugbear (extended)
  "C4",     # flake8-comprehensions (extended)
  "I",      # isort (extended)
  "N",      # pep8-naming (extended)
  "S",      # flake8-bandit (extended)
  "W",      # pycodestyle warnings (extended)
  "TID252"  # Banned imports
]
ignore = [
  "S101",   # Allow assert statements (needed for tests)
  "D105",   # Missing docstring in magic method
  "D107",   # Missing docstring in __init__
  "D203",   # 1 blank line required before class docstring (conflicts with D211)
  "D212",   # Multi-line docstring summary should start at first line (conflicts with D213)
  "E402",   # Module level import not at top of file
  "D100",   # Missing docstring in public module (not critical)
  "D102",   # Missing docstring in public method (acceptable for simple methods)
  "D103",   # Missing docstring in public function (acceptable for simple functions)
  "PLW0603", # Global statement usage (acceptable for logging setup)
  "PLR2004", # Magic value comparison (acceptable for numeric thresholds)
  "RUF012",  # Mutable class attributes (acceptable without ClassVar in this context)
  "C901",    # Complex structure (acceptable for data parsing logic)
  "BLE001",  # Blind except (acceptable with proper logging)
  "SIM102",  # Collapsible if (sometimes clearer when separate)
  "N999"     # Invalid module name (third-party file naming)
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true # disable make list linewise
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true

[tool.pydocstringformatter]
style = "pep257" # or 'numpydoc', need plugin if using 'google'
write = true

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "christmax.settings"
pythonpath = [ "." ]
#addopts = "--reuse-db --import-mode=importlib"
addopts = "--capture=tee-sys"
python_files = ['tests.py', 'test_*.py', '*_tests.py']
norecursedirs = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
